
SUBDIRS = jpeg md5 uberopt work huffman

noinst_PROGRAMS = example1 oil-inspect oil-test


example1_SOURCES = example1.c
example1_CFLAGS = $(LIBOIL_CFLAGS)
example1_LDADD = $(LIBOIL_LIBS)

oil_inspect_SOURCES = oil-inspect.c
oil_inspect_CFLAGS = $(LIBOIL_CFLAGS)
oil_inspect_LDADD = $(LIBOIL_LIBS)

oil_test_SOURCES = oil-test.c
oil_test_CFLAGS = $(LIBOIL_CFLAGS)
oil_test_LDADD = $(LIBOIL_LIBS)

