
SUBDIRS = jpeg md5 uberopt work huffman taylor

noinst_PROGRAMS = example1 oil-graph oil-inspect oil-test report memcpy-speed oil-suggest


example1_SOURCES = example1.c
example1_CFLAGS = $(LIBOIL_CFLAGS)
example1_LDADD = $(LIBOIL_LIBS)

oil_graph_SOURCES = oil-graph.c
oil_graph_CFLAGS = $(LIBOIL_CFLAGS)
oil_graph_LDADD = $(LIBOIL_LIBS)

oil_inspect_SOURCES = oil-inspect.c
oil_inspect_CFLAGS = $(LIBOIL_CFLAGS)
oil_inspect_LDADD = $(LIBOIL_LIBS)

oil_suggest_SOURCES = oil-suggest.c
oil_suggest_CFLAGS = $(LIBOIL_CFLAGS)
oil_suggest_LDADD = $(LIBOIL_LIBS)

oil_test_SOURCES = oil-test.c
oil_test_CFLAGS = $(LIBOIL_CFLAGS)
oil_test_LDADD = $(LIBOIL_LIBS)

report_SOURCES = report.c
report_CFLAGS = $(LIBOIL_CFLAGS)
report_LDADD = $(LIBOIL_LIBS)

memcpy_speed_SOURCES = memcpy-speed.c
memcpy_speed_CFLAGS = $(LIBOIL_CFLAGS)
memcpy_speed_LDADD = $(LIBOIL_LIBS)

