
SUBDIRS = 

noinst_LTLIBRARIES = liboil-lite-@LIBOIL_MAJORMINOR@.la

liboil_lite_@LIBOIL_MAJORMINOR@_la_SOURCES = \
	liboilfunction.c \
	liboilfunction.h \
	liboil.h \
	liboilfuncs.h \
	conv_ref.c
liboil_lite_@LIBOIL_MAJORMINOR@_la_CFLAGS = $(LIBOIL_LITE_CFLAGS)
liboil_lite_@LIBOIL_MAJORMINOR@_la_LDFLAGS = -lm

