
pkgincludedir = $(includedir)/liboil-@LIBOIL_MAJORMINOR@/liboil

SUBDIRS = colorspace conv copy dct jpeg md5 motovec simdpack sse utf8

lib_LTLIBRARIES = liboiltmp1.la liboil-@LIBOIL_MAJORMINOR@.la

noinst_LTLIBRARIES = liboilfunctions.la

noinst_PROGRAMS = build_prototypes build_prototypes_doc build_marshal

pkginclude_HEADERS = liboil.h liboilfunction.h liboildebug.h liboilfuncs.h \
	liboiltypes.h liboilcpu.h liboilprototype.h liboilparameter.h \
	liboilrandom.h liboilgcc.h liboiltest.h liboilprofile.h

nodist_noinst_HEADERS = liboilfuncs-doc.h

CLEANFILES = liboilarray.c liboilfuncs-doc.h

liboilfunctions_la_SOURCES = \
	null.c
liboilfunctions_la_CFLAGS = $(LIBOIL_CFLAGS)
liboilfunctions_la_LIBADD = \
	conv/libconv.la \
	colorspace/libcolorspace.la \
	copy/libcopy.la \
	dct/libdct.la \
	jpeg/libjpeg.la \
	md5/libmd5.la \
	motovec/libmotovec.la \
	simdpack/libsimdpack.la \
	sse/libsse.la \
	utf8/libutf8.la \
	$(LIBM)
liboilfunctions_la_LDFLAGS = \
	-no-undefined

liboiltmp1_la_SOURCES =
liboiltmp1_la_LDFLAGS = \
	-no-undefined \
	-export-symbols-regex 'oil_'
liboiltmp1_la_LIBADD = \
	liboilfunctions.la \
	$(LIBM)

liboil_@LIBOIL_MAJORMINOR@_la_SOURCES = \
	liboil.h \
	liboildebug.h \
	liboilfuncs.h \
	liboilfunction.h \
	liboilprofile.h \
	liboiltypes.h \
	liboilfunction.c \
	liboildebug.c \
	liboilcpu.c \
	liboilprofile.c \
	liboilprototype.c \
	liboilarray.c \
	liboiltest.h \
	liboiltest.c \
	liboilmarshal.c
liboil_@LIBOIL_MAJORMINOR@_la_LIBADD = \
	liboilfunctions.la \
	$(LIBM)
liboil_@LIBOIL_MAJORMINOR@_la_CFLAGS = $(LIBOIL_CFLAGS)
liboil_@LIBOIL_MAJORMINOR@_la_LDFLAGS = \
	-no-undefined \
	-version-info $(LIBOIL_LIBVERSION) \
	-export-symbols-regex '^oil_'

# This is required to use 'make -j2'. Automake doesn't seem to notice
# that one of the dependencies is in this directory.
build_prototypes_DEPENDENCIES = liboil-$(LIBOIL_MAJORMINOR).la

build_prototypes_SOURCES = build_prototypes.c
build_prototypes_CFLAGS = $(LIBOIL_CFLAGS)
build_prototypes_LDADD = $(LIBOIL_LIBS)

build_prototypes_doc_DEPENDENCIES = liboil-$(LIBOIL_MAJORMINOR).la
build_prototypes_doc_SOURCES = build_prototypes_doc.c
build_prototypes_doc_CFLAGS = $(LIBOIL_CFLAGS)
build_prototypes_doc_LDADD = $(LIBOIL_LIBS)

build_marshal_DEPENDENCIES = liboil-$(LIBOIL_MAJORMINOR).la

build_marshal_SOURCES = build_marshal.c
build_marshal_CFLAGS = $(LIBOIL_CFLAGS)
build_marshal_LDADD = $(LIBOIL_LIBS)

liboilarray.c: liboiltmp1.la Makefile
	echo '/* This file is autogenerated.  Do not edit */' >liboilarray.c
	echo >>liboilarray.c
	echo '#include <liboil/liboilfunction.h>' >>liboilarray.c
	echo >>liboilarray.c
	grep '^_oil_function_class_' .libs/liboiltmp1.exp | \
	  sed 's/.*/extern OilFunctionClass &;/' >>liboilarray.c
	echo >>liboilarray.c
	echo 'OilFunctionClass *_oil_function_class_array[] = {' >>liboilarray.c
	grep '^_oil_function_class_' .libs/liboiltmp1.exp | \
	  sed 's/.*/  \&&,/' >>liboilarray.c
	echo '  NULL' >>liboilarray.c
	echo '};' >>liboilarray.c
	echo >>liboilarray.c
	grep '^_oil_function_impl_' .libs/liboiltmp1.exp | \
	  sed 's/.*/extern OilFunctionImpl &;/' >>liboilarray.c
	echo >>liboilarray.c
	echo 'OilFunctionImpl *_oil_function_impl_array[] = {' >>liboilarray.c
	grep '^_oil_function_impl_' .libs/liboiltmp1.exp | \
	  sed 's/.*/  \&&,/' >>liboilarray.c
	echo '  NULL' >>liboilarray.c
	echo '};' >>liboilarray.c
	echo >>liboilarray.c

liboilfuncs.h:
	./build_prototypes >liboilfuncs.h

liboilmarshal.c:
	./build_marshal >liboilmarshal.c

liboilfuncs-doc.h:
	./build_prototypes_doc >liboilfuncs-doc.h

update:
	./build_prototypes >liboilfuncs.h
	./build_marshal >liboilmarshal.c
	./build_prototypes_doc >liboilfuncs-doc.h

